# blendwatch

./: .gitignore  README.md  hook-blendwatch.py  pyproject.toml  sample.config.toml
docs/: blender-asset-tracer-api-reference.md  blender-asset-tracer-integration-plan.md  technical-implementation-guide.md
src/blendwatch/: __init__.py  backlinks.py  cli.py  config.py  default.config.toml  library_writer.py  link_updater.py  watcher.py
src/blendwatch/blender/: __init__.py  backlinks.py  block_level_optimizations.py  cache.py  library_writer.py  link_updater.py
src/blendwatch/cli/: __init__.py  main.py  utils.py
src/blendwatch/cli/commands/: __init__.py  backlinks.py  deps.py  init_config.py  report.py  status.py  sync.py  update_links.py  watch.py
src/blendwatch/core/: __init__.py  config.py  file_index.py  watcher.py
src/blendwatch/utils/: __init__.py  logging_utils.py  path_utils.py
tests/: test_backlinks.py  test_block_level_optimizations.py  test_cli.py  test_config.py  test_file_index.py  test_integration.py  test_library_writer.py  test_link_updater.py  test_watcher.py
