[project]
name = "blendwatch"
version = "0.1.0"
description = "Track and updated linked assets in Blender on a large filesystem."
authors = [{ name = "Albert O'Shea", email = "albertoshea2@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "watchdog>=4.0.0",
    "click>=8.1.0",
    "colorama>=0.4.6",
    "tomli>=2.0.0"
]

[project.scripts]
blendwatch = "blendwatch.cli:main"

[tool.poetry]
packages = [{ include = "blendwatch", from = "src" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
